--- a/SportsSideKick/app/src/main/res/layout/chat_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/chat_item.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginBottom="@dimen/margin_10">
+    android:layout_marginBottom="@dimen/margin_10"
+    tools:ignore="ContentDescription">
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
         android:id="@+id/chat_head_image_view"
         android:layout_width="@dimen/width_60"
         android:layout_height="@dimen/height_60"
         android:layout_alignParentTop="true"
         android:padding="@dimen/padding_8"
-        android:scaleType="centerCrop"
-        app:civ_border_width="@dimen/image_border_width_2"/>
-
-
+        android:scaleType="centerCrop"/>
 
     <TextView
         android:id="@+id/chat_name"
@@ -29,6 +28,6 @@
         android:maxLines="1"
         android:textColor="@color/white"
         android:textSize="@dimen/font_size_11"
-        android:textStyle="bold" />
+        android:textStyle="bold"/>
 
 </RelativeLayout>
