--- a/SportsSideKick/app/src/main/res/layout/fragment_club_radio.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_club_radio.xml
@@ -7,14 +7,13 @@
     android:background="@color/colorPrimaryMediumLight"
     tools:context="base.app.fragment.instance.ClubRadioFragment">
 
-    <com.wang.avi.AVLoadingIndicatorView
+    <ProgressBar
         android:id="@+id/progress_bar"
-        android:layout_width="@dimen/prodgres_bar"
-        android:layout_height="@dimen/prodgres_bar"
+        android:layout_width="@dimen/progress_bar"
+        android:layout_height="@dimen/progress_bar"
         android:layout_centerInParent="true"
         android:visibility="gone"
-        android:elevation="@dimen/elevation_2"
-        app:indicatorName="LineSpinFadeLoaderIndicator"/>
+        style="?android:progressBarStyleSmall"/>
 
     <android.support.percent.PercentRelativeLayout
         android:id="@+id/video_player_dummy_container"
