--- a/SportsSideKick/app/src/main/res/layout/popup_signup.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_signup.xml
@@ -233,14 +233,14 @@
                 android:textColor="@android:color/black"
                 android:textSize="@dimen/font_size_18"/>
 
-            <com.wang.avi.AVLoadingIndicatorView
+            <ProgressBar
                 android:id="@+id/sign_up_progress_bar"
-                android:layout_width="@dimen/prodgres_bar"
-                android:layout_height="@dimen/prodgres_bar"
+                android:layout_width="@dimen/progress_bar"
+                android:layout_height="@dimen/progress_bar"
                 android:layout_centerInParent="true"
                 android:elevation="@dimen/elevation_2"
                 android:visibility="gone"
-                app:indicatorName="LineSpinFadeLoaderIndicator"/>
+                style="?android:progressBarStyleSmall"/>
 
         </RelativeLayout>
 
@@ -279,14 +279,14 @@
             android:visibility="visible"/>
 
 
-        <com.wang.avi.AVLoadingIndicatorView
+        <ProgressBar
             android:id="@+id/progress_bar_veb_view"
-            android:layout_width="@dimen/prodgres_bar"
-            android:layout_height="@dimen/prodgres_bar"
+            android:layout_width="@dimen/progress_bar"
+            android:layout_height="@dimen/progress_bar"
             android:layout_centerInParent="true"
             android:elevation="@dimen/elevation_2"
             android:visibility="visible"
-            app:indicatorName="LineSpinFadeLoaderIndicator"/>
+            style="?android:progressBarStyleSmall"/>
 
         <RelativeLayout
             android:id="@+id/top_buttons_container_veb_view"
