--- a/SportsSideKick/app/src/main/res/layout-large/fragment_club_radio.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_club_radio.xml
@@ -6,27 +6,27 @@
     android:background="@color/colorPrimaryMediumLight"
     tools:context="base.app.fragment.instance.ClubRadioFragment">
 
-    <com.wang.avi.AVLoadingIndicatorView
+    <ProgressBar
         android:id="@+id/progress_bar"
-        android:layout_width="@dimen/prodgres_bar"
-        android:layout_height="@dimen/prodgres_bar"
+        android:layout_width="@dimen/progress_bar"
+        android:layout_height="@dimen/progress_bar"
         android:layout_centerInParent="true"
-        android:elevation="@dimen/elevation_2"
-        app:indicatorName="LineSpinFadeLoaderIndicator" />
+        style="?android:progressBarStyleSmall" />
 
     <android.support.percent.PercentRelativeLayout
         android:id="@+id/video_player_dummy_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/margin_105">
+
         <View
             android:id="@+id/youtube_layout"
             android:layout_marginBottom="16dp"
             android:visibility="invisible"
             app:layout_aspectRatio="178%"
             app:layout_widthPercent="100%"/>
+
     </android.support.percent.PercentRelativeLayout>
-    <!--  /\/\/\/\/\/\/\ -->
 
     <!-- Items -->
     <android.support.v7.widget.RecyclerView
