--- a/SportsSideKick/app/src/main/res/layout-large/fragment_rumours.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_rumours.xml
@@ -5,14 +5,14 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryMediumLight">
 
-    <com.wang.avi.AVLoadingIndicatorView
+    <ProgressBar
         android:id="@+id/progress_bar"
-        android:layout_width="@dimen/prodgres_bar"
-        android:layout_height="@dimen/prodgres_bar"
+        android:layout_width="@dimen/progress_bar"
+        android:layout_height="@dimen/progress_bar"
         android:layout_centerInParent="true"
         android:elevation="@dimen/elevation_2"
         android:visibility="visible"
-        app:indicatorName="LineSpinFadeLoaderIndicator" />
+        style="?android:progressBarStyleSmall" />
 
     <com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout
         android:id="@+id/swipe_refresh_layout"
