--- a/SportsSideKick/app/src/main/res/layout-large/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_wall.xml
@@ -3,17 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/login_background"
+    android:background="@color/backgroundLight"
     tools:context="base.app.fragment.instance.WallFragment">
 
 
-    <com.wang.avi.AVLoadingIndicatorView
+    <ProgressBar
         android:id="@+id/progress_bar"
-        android:layout_width="@dimen/prodgres_bar"
-        android:layout_height="@dimen/prodgres_bar"
+        android:layout_width="@dimen/progress_bar"
+        android:layout_height="@dimen/progress_bar"
         android:layout_centerInParent="true"
-        android:elevation="@dimen/elevation_2"
-        app:indicatorName="LineSpinFadeLoaderIndicator" />
+        style="?android:progressBarStyleSmall" />
 
     <LinearLayout
         android:id="@+id/login_holder"
@@ -22,7 +21,7 @@
         android:animateLayoutChanges="true"
         android:paddingTop="@dimen/margin_16"
         android:orientation="vertical"
-        android:background="@color/login_background"
+        android:background="@color/backgroundLight"
         android:visibility="gone"
         android:layout_height="wrap_content">
 
