--- a/SportsSideKick/app/src/main/res/layout-large/item_video_chat_slot.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/item_video_chat_slot.xml
@@ -5,14 +5,14 @@
     android:layout_height="match_parent"
     app:layout_constraintBottom_toTopOf="@+id/preview_video_view">
 
-    <com.wang.avi.AVLoadingIndicatorView
+    <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="@dimen/progress_bar_width"
         android:layout_height="@dimen/progress_bar_height"
         android:layout_centerInParent="true"
         android:elevation="@dimen/elevation_2"
         android:visibility="gone"
-        app:indicatorName="LineSpinFadeLoaderIndicator"
+        style="?android:progressBarStyleSmall"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
