--- a/SportsSideKick/app/src/main/res/layout-large/popup_your_friends.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_your_friends.xml
@@ -49,13 +49,12 @@
         android:layout_alignParentTop="true"
         android:background="?colorAccent" />
 
-    <com.wang.avi.AVLoadingIndicatorView
+    <ProgressBar
         android:id="@+id/progress_bar"
-        android:layout_width="@dimen/prodgres_bar"
-        android:layout_height="@dimen/prodgres_bar"
+        android:layout_width="@dimen/progress_bar"
+        android:layout_height="@dimen/progress_bar"
         android:layout_centerInParent="true"
-        android:elevation="@dimen/elevation_2"
-        app:indicatorName="LineSpinFadeLoaderIndicator" />
+        style="?android:progressBarStyleSmall" />
 
     <!-- FRIENDS  LIST-->
     <RelativeLayout
