--- a/SportsSideKick/app/src/main/res/layout/fragment_create_post.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_create_post.xml
@@ -111,14 +111,13 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
-        <com.wang.avi.AVLoadingIndicatorView
+        <ProgressBar
             android:id="@+id/progress_bar"
             android:layout_width="@dimen/progress_bar_height"
             android:layout_height="@dimen/progress_bar_height"
             android:elevation="@dimen/elevation_2"
             android:visibility="invisible"
-            app:indicatorColor="@color/black"
-            app:indicatorName="LineSpinFadeLoaderIndicator"
+            style="?android:progressBarStyleSmall"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
