--- a/SportsSideKick/app/src/main/res/layout/popup_member_info.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_member_info.xml
@@ -498,13 +498,13 @@
             android:layout_alignParentEnd="true"
             android:scaleType="centerInside" />
 
-        <com.wang.avi.AVLoadingIndicatorView
+        <ProgressBar
             android:id="@+id/friend_progress_bar"
-            android:layout_width="@dimen/prodgres_bar"
-            android:layout_height="@dimen/prodgres_bar"
+            android:layout_width="@dimen/progress_bar"
+            android:layout_height="@dimen/progress_bar"
             android:layout_centerInParent="true"
             android:elevation="@dimen/elevation_2"
-            app:indicatorName="LineSpinFadeLoaderIndicator" />
+            style="?android:progressBarStyleSmall" />
 
     </RelativeLayout>
 
@@ -547,13 +547,13 @@
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
             android:scaleType="centerInside" />
-        <com.wang.avi.AVLoadingIndicatorView
+        <ProgressBar
             android:id="@+id/chat_room_progress_bar"
-            android:layout_width="@dimen/prodgres_bar"
-            android:layout_height="@dimen/prodgres_bar"
+            android:layout_width="@dimen/progress_bar"
+            android:layout_height="@dimen/progress_bar"
             android:layout_centerInParent="true"
             android:elevation="@dimen/elevation_2"
-            app:indicatorName="LineSpinFadeLoaderIndicator" />
+            style="?android:progressBarStyleSmall" />
 
     </RelativeLayout>
 
