--- a/SportsSideKick/app/src/main/res/layout/view_translation.xml
+++ b/SportsSideKick/app/src/main/res/layout/view_translation.xml
@@ -7,14 +7,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.wang.avi.AVLoadingIndicatorView
+    <ProgressBar
         android:id="@+id/progress"
         android:layout_width="@dimen/progress_bar_width"
         android:layout_height="@dimen/progress_bar_height"
         android:layout_centerInParent="true"
         android:adjustViewBounds="true"
         app:indicatorColor="@color/white"
-        app:indicatorName="LineSpinFadeLoaderIndicator"
+        style="?android:progressBarStyleSmall"
         android:visibility="gone" />
 
     <RelativeLayout
