--- a/SportsSideKick/app/src/main/res/layout/activity_main.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="48dp"
-    tools:context="base.app.activity.MainActivity"
-    tools:layout_marginBottom="0dp">
+    tools:context="base.app.activity.MainActivity">
 
     <android.support.percent.PercentRelativeLayout
         android:id="@+id/activity_main"
@@ -125,6 +123,14 @@
 
         </RelativeLayout>
 
+        <View
+            android:id="@+id/shadow"
+            android:layout_width="fill_parent"
+            android:layout_height="@dimen/height_2"
+            android:layout_above="@+id/bottom_menu_recycler_view"
+            android:alpha="0.6"
+            android:background="@drawable/top_gradient_drawable"/>
+
         <base.app.util.ui.NoScrollRecycler
             android:id="@+id/bottom_menu_recycler_view"
             android:layout_width="match_parent"
@@ -165,14 +171,6 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:background="@color/transparent"/>
-
-        <View
-            android:id="@+id/shadow"
-            android:layout_width="fill_parent"
-            android:layout_height="@dimen/height_2"
-            android:layout_above="@+id/bottom_menu_recycler_view"
-            android:alpha="0.6"
-            android:background="@drawable/top_gradient_drawable"/>
 
         <base.app.util.ui.NextMatchView
             android:id="@+id/splash"
@@ -408,4 +406,5 @@
                 android:overScrollFooter="@android:color/transparent"/>
         </android.support.percent.PercentRelativeLayout>
     </android.support.percent.PercentRelativeLayout>
+
 </android.support.v4.widget.DrawerLayout>
