--- a/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
@@ -25,16 +25,16 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="120dp"
+            android:paddingBottom="4dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/text_content"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
                 android:ellipsize="end"
-                android:maxLines="4"
+                android:maxLines="3"
                 android:layout_marginTop="-4dp"
                 android:lineSpacingMultiplier="0.8"
                 android:paddingTop="16dp"
@@ -45,11 +45,16 @@
                 android:textColor="#1b1c1a"
                 android:textSize="16sp"/>
 
+            <android.support.v4.widget.Space
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:padding="4dp"
+                android:gravity="bottom"
+                android:layout_marginRight="8dp"
                 android:orientation="horizontal">
 
                 <!--TODO: Show author image if this is a pinned item, not official news-->
